# CubeMxAndCmakeExample

./: .mxproject  BlinkyF411.ioc  CMakeLists.txt  README.md
Src/: main.c
